Added abstraction for the underlying HTTP client