@@ -3,14 +3,12 @@ package com.senacor.elasticsearch.evolution.springboot33;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.commons.io.IOUtils;
-import org.elasticsearch.client.Request;
-import org.elasticsearch.client.Response;
-import org.elasticsearch.client.RestClient;
+import org.springframework.http.MediaType;
+import org.springframework.web.client.RestClient;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
@@ -28,36 +26,29 @@ public class EsUtils {
     }
 
     public void refreshIndices() {
-        try {
-            restClient.performRequest(new Request("GET", "/_refresh"));
-        } catch (IOException e) {
-            throw new IllegalStateException("refreshIndices failed", e);
-        }
+        restClient.get().uri("/_refresh").retrieve();
     }
 
     public List<String> fetchAllDocuments(String index) {
-        try {
-            Request post = new Request("POST", "/" + index + "/_search");
-            post.setJsonEntity("""
-                    {\
-                        "query": {\
-                            "match_all": {}\
+        String body = restClient.post()
+                .uri("/" + index + "/_search")
+                .body("""
+                        {\
+                            "query": {\
+                                "match_all": {}\
+                            }\
                         }\
-                    }\
-                    """);
-            Response response = restClient.performRequest(post);
-            int statusCode = response.getStatusLine().getStatusCode();
-            if (statusCode < 200 || statusCode >= 300) {
-                throw new IllegalStateException("fetchAllDocuments(" + index + ") failed with HTTP status " +
-                        statusCode + ": " + response.toString());
-            }
-            String body = IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8);
+                        """)
+                .contentType(MediaType.APPLICATION_JSON)
+                .retrieve()
+                .onStatus(status -> !status.is2xxSuccessful(), (request, response) -> {
+                    throw new IllegalStateException("fetchAllDocuments(" + index + ") failed with HTTP status " +
+                            response.getStatusCode().value() + ": " + IOUtils.toString(response.getBody(), StandardCharsets.UTF_8));
+                })
+                .body(String.class);
 
-            return parseDocuments(body)
-                    .collect(Collectors.toList());
-        } catch (IOException e) {
-            throw new IllegalStateException("fetchAllDocuments(" + index + ") failed", e);
-        }
+        return parseDocuments(body)
+                .toList();
     }
 
     private Stream<String> parseDocuments(String body) {
